# assistant

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  instructions.md  justfile  main.py  pyproject.toml
.github/workflow/: lint.yaml
.github/workflows/: lint.yaml  pre-commit.yml  tests.yaml
app/: Dockerfile.main  README.md  agents.py  background.py  caching.py  github_event_filters.json  github_instructions.md  main.py  settings.py  storage.py  storage_sqlite.py  types.py
app/api/: dependencies.py  templates.py
app/api/endpoints/: entities.py  home.py  observations.py  sources.py
app/processors/: email.py  github.py  slack.py
app/sources/: email.py  github.py  slack.py
app/static/: styles.css
app/storage/compact/: compact_20241103_022941.json
app/storage/entities/: Flow crashed.json  nate-nowack.json  pr-15875.json  repo-prefecthq-prefect.json  wandb-certification.json
app/storage/processed/: raw_20241103_022925.json  raw_20241103_024206.json  raw_20241103_055704.json  raw_20241103_063349.json  summary_20241103_022931.json  summary_20241103_022938.json  summary_20241103_024208.json  summary_20241103_024231.json  summary_20241103_055710.json  summary_20241103_060101.json  summary_20241103_063353.json  summary_20241103_063435.json
app/summaries/: summary_20241027_171754.json  summary_20241027_171955.json  summary_20241027_224115.json  summary_20241028_021856.json  summary_20241028_025010.json  summary_20241028_042210.json  summary_20241028_044720.json  summary_20241028_044920.json
app/summaries/compact/: compact_20241028_0412_20241028_0419.json  compact_20241029_075512.json  compact_20241030_025046.json  compact_20241030_030324.json
app/summaries/entities/: nate-nowack.json
app/summaries/processed/: raw_20241029_073756.json  raw_20241030_024755.json  raw_20241030_030209.json  raw_20241103_004556.json  summary_20241027_183201.json  summary_20241027_224115.json  summary_20241028_021648.json  summary_20241028_023051.json  summary_20241028_023330.json  summary_20241028_024214.json  (+26 more)
app/templates/: base.html  home.html
assistant/: __init__.py  loop.py  observer.py  settings.py
assistant/background/: task_manager.py
assistant/observers/: github.py  gmail.py  slack.py
assistant/utilities/: loggers.py
scripts/: configure.py  generate_commit_msg.py  install_hooks.py  pre_commit.py  project_to_prompt
tests/: __init__.py
tests/background/: test_task_manager.py
(+32 files in other folders)
